--- a/ForecastingWeb/views/index.pug
+++ b/ForecastingWeb/views/index.pug
@@ -4,36 +4,42 @@ mixin space()
   |&nbsp;
 
 block content
-  script.
-    initializeVariables();
-  #topPage
+  #header
+    img#networkImage(src='images/neuralNetwork.svg' alt='Neural network')
     h1.title Atmospheric pollution forecast
-  //p Welcome to #{totalAQI}
-  //button(onclick="graphToggle()") &#9776;
   #content
     p#actualValues AQI actual values
     #pollutionData
       #imageAQI
-        img#smog(src='images/foggy.svg' alt='AQI')
-        //p#actualAQI 45
+        img#smogImage(src='images/aqi.svg' alt='AQI')
         p#actualAQI #{totalAQI}
-      .listPollutant
-          ul
-            li
-              // | PM25: <b>45</b>
-              | PM25: <b>#{actualPM25}</b>
-            li
-              // | PM10: <b>45</b>
-              | PM10: <b>#{actualPM10}</b>
-            li
-              //| O3: <b>18</b>
-              | O3: <b>#{actualO3}</b>
-            li
-              //| NO2: <b>12</b>
-              | NO2: <b>#{actualNO2}</b>
-            li
-              //| SO2: <b>123</b>
-              | SO2: <b>#{actualSO2}</b>
+      table
+        tbody
+          tr
+            td(style='text-align: left;')
+              | PM25:
+            td#good(style='text-align: right;')
+              b #{actualPM25}
+          tr
+            td(style='text-align: left;')
+              | PM10:
+            td#good(style='text-align: right;')
+              b #{actualPM10}
+          tr
+            td(style='text-align: left;')
+              | O3:
+            td#good(style='text-align: right;')
+              b #{actualO3}
+          tr
+            td(style='text-align: left;')
+              | NO2:
+            td#good(style='text-align: right;')
+              b #{actualNO2}
+          tr
+            td(style='text-align: left;')
+              | SO2:
+            td#good(style='text-align: right;')
+              b #{actualSO2}
       .listMadrid
           ul
             li(style="font-weight: bolder; font-size: 32px;")
@@ -61,7 +67,7 @@ block content
     p.pollutantInfo#SO2Info(style="display:none;") Sulfur dioxide is a a colorless, bad-smelling, toxic gas. <br> It can contribute to respiratory illness by making breathing more difficult.
     #pollutionCharts
       +space
-      canvas#PM25Chart(width='768' height='400' style="margin:40px")
+      canvas#PM25Chart
       script.
         var data = [34,36,40,26,36,43,81,68];
         var colors = [];
@@ -81,10 +87,10 @@ block content
                   color = "#C1301C";
                   break;
               case data[i] < 301:
-                  color = "rgb(143, 63, 151)";
+                  color = "#8F3F97";
                   break;
               case data[i] < 501:
-                  color = "rgb(126, 0, 35)";
+                  color = "#7E0023";
                   break;
           }
           colors[i] = color;
@@ -129,7 +135,7 @@ block content
         }
         });
 
-      canvas#PM10Chart(width='768' height='400' style="margin:40px; display:none")
+      canvas#PM10Chart(style=" display:none")
       script.
         var data = [11,14,10,15,19,22,25,37];
         var colors = [];
@@ -149,10 +155,10 @@ block content
                   color = "#C1301C";
                   break;
               case data[i] < 301:
-                  color = "rgb(143, 63, 151)";
+                  color = "#8F3F97";
                   break;
               case data[i] < 501:
-                  color = "rgb(126, 0, 35)";
+                  color = "#7E0023";
                   break;
           }
           colors[i] = color;
@@ -198,7 +204,7 @@ block content
         }
         });
 
-      canvas#O3Chart(width='768' height='400' style="margin:40px; display:none")
+      canvas#O3Chart(style="display:none")
       script.
         var data = [112,14,140,15,19,22,25,37];
         var colors = [];
@@ -218,10 +224,10 @@ block content
                   color = "#C1301C";
                   break;
               case data[i] < 301:
-                  color = "rgb(143, 63, 151)";
+                  color = "#8F3F97";
                   break;
               case data[i] < 501:
-                  color = "rgb(126, 0, 35)";
+                  color = "#7E0023";
                   break;
           }
           colors[i] = color;
@@ -267,7 +273,7 @@ block content
         }
         });
 
-      canvas#NO2Chart(width='768' height='400' style="margin:40px; display:none")
+      canvas#NO2Chart(style="display:none")
       script.
         var data = [11,14,10,154,19,22,25,347];
         var colors = [];
@@ -287,10 +293,10 @@ block content
                   color = "#C1301C";
                   break;
               case data[i] < 301:
-                  color = "rgb(143, 63, 151)";
+                  color = "#8F3F97";
                   break;
               case data[i] < 501:
-                  color = "rgb(126, 0, 35)";
+                  color = "#7E0023";
                   break;
           }
           colors[i] = color;
@@ -336,7 +342,7 @@ block content
         }
         });
 
-      canvas#SO2Chart(width='768' height='400' style="margin:40px; display:none")
+      canvas#SO2Chart(style="display:none")
       script.
         var data = [67,14,10,15,19,123,25,37];
         var colors = [];
@@ -356,10 +362,10 @@ block content
                   color = "#C1301C";
                   break;
               case data[i] < 301:
-                  color = "rgb(143, 63, 151)";
+                  color = "#8F3F97";
                   break;
               case data[i] < 501:
-                  color = "rgb(126, 0, 35)";
+                  color = "#7E0023";
                   break;
           }
           colors[i] = color;
@@ -405,10 +411,10 @@ block content
         }
         });
 
-      .my-legend
-        .legend-title AQI standard levels and meaning
-        .legend-scale
-          ul.legend-labels
+      .legend
+        .legendTitle AQI standard levels and meaning
+        .scale
+          ul.labels
             li
               span(style='background: #177245;')
               | Good (<50)
@@ -422,17 +428,17 @@ block content
               span(style='background: #C1301C;')
               | Unhealthy (<200)
             li
-              span(style='background: rgb(143, 63, 151);')
+              span(style='background: #8F3F97;')
               | Very unhealty (<300)
             li
-              span(style='background: rgb(126, 0, 35)')
+              span(style='background: #7E0023')
               | Hazardous (300+)
-        .legend-source
+        .source
           | Source: 
           a(href='https://www.airnow.gov/aqi/aqi-basics/') AirNow 
 
     +space
-    table
+    //table
       caption(style='text-align:center;font-size:larger')
         strong AQI Basics for Ozone and Particle Pollution
       thead
@@ -481,7 +487,7 @@ block content
           td
             strong
               | Some members of the general public may experience health effects; members of sensitive groups may experience more serious health effects.
-        tr(style='background: rgb(143, 63, 151);color:white')
+        tr(style='background: #8F3F97;color:white')
           td(style='text-align: center;')
             strong Purple
           td#vunh(style='text-align: center; ')
@@ -490,7 +496,7 @@ block content
             strong 201 to 300
           td
             strong Health alert: The risk of health effects is increased for everyone.
-        tr(style='background: rgb(126, 0, 35);color:white')
+        tr(style='background: #7E0023;color:white')
           td(style='text-align: center; ')
             strong Maroon
           td#haz(style='text-align: center; ')
@@ -502,8 +508,15 @@ block content
 
 
     +space
-    h2 Weather forecast used to predict contamination values
-    table(style='margin-top:30px')
+    #information
+      h2 <br>What is AQI?
+      p The Air Quality Index (AQI) is used for reporting daily air quality. It tells you how clean or polluted your air is, and what associated health effects might be a concern for you. 
+      p The AQI focuses on health effects you may experience within a few hours or days after breathing polluted air. Ground-level ozone and airborne particles are the two pollutants that pose the greatest threat to human health.
+      +space
+      h2 How do we obtain the forecast?
+      p Using artificial intelligence techniques, we offer the prediction for the contamination values in the city of Madrid for the next week.
+      p A model obtained from a neural network trained with historical data allows us to know the trends in order to anticipate possible issues.
+    //table(style='margin-top:30px')
       tr
         th Date
         th Max. temperature (ºC)
@@ -596,7 +609,7 @@ block content
         td #{precipitations7}
     
 
-    #graphs2(style="display:flex; flex-direction: row; justify-content: center; align-items: center")
+    //#graphs2(style="display:flex; flex-direction: row; justify-content: center; align-items: center")
       +space
       canvas#proChart(width='600' height='400' style="margin:40px")
       script.
@@ -612,11 +625,6 @@ block content
               data: [#{tMax0},#{tMax1},#{tMax2},#{tMax3},#{tMax4},#{tMax5},#{tMax6},#{tMax7}]
             },
             {
-              label: "Average temperature (ºC)",
-              backgroundColor: ["#008000"],
-              data: [#{tAvg0},#{tAvg1},#{tAvg2},#{tAvg3},#{tAvg4},#{tAvg5},#{tAvg6},#{tAvg7}]
-            },
-            {
               label: "Min temperature (ºC)",
               backgroundColor: ["#0000FF"],
               data: [#{tMin0},#{tMin1},#{tMin2},#{tMin3},#{tMin4},#{tMin5},#{tMin6},#{tMin7}]
@@ -627,3 +635,6 @@ block content
           responsive:false
         }
         })
+  #footer
+    img#usalImage(src='images/usal.png' alt='USAL')
+    h3(style=" align-self: flex-end; padding:35px") Ismael Mira Hernández | TFG Grado en Ingeniería Informática | 2022
