--- a/ForecastingWeb/views/index.pug
+++ b/ForecastingWeb/views/index.pug
@@ -512,6 +512,7 @@ block content
       h2 <br>What is AQI?
       p The Air Quality Index (AQI) is used for reporting daily air quality. It tells you how clean or polluted your air is, and what associated health effects might be a concern for you. 
       p The AQI focuses on health effects you may experience within a few hours or days after breathing polluted air. Ground-level ozone and airborne particles are the two pollutants that pose the greatest threat to human health.
+      p Source for further information: <a href="https://www.weather.gov/safety/airquality-aqindex">https://www.weather.gov/safety/airquality-aqindex</a>
       +space
       h2 How do we obtain the forecast?
       p Using artificial intelligence techniques, we offer the prediction for the contamination values in the city of Madrid for the next week.
